<resources>
    <string name="title_activity_screen_comparison">Comparação de Estados</string>
    <string name="title_activity_screen_state_list">Lista de estados</string>
    <string name="title_activity_screen_about">Sobre o EEF</string>
    <string name="title_activity_screen_query_per_indicative">Consulta de Indicativos</string>
    <string name="title_activity_screen_consulted_idicatives">Escolha os indicativos</string>
    <string name="title_activity_screen_query_result">Comparação de Estados</string>
    <string name="title_activity_screen_feed">Notícias</string>
    <string name="title_activity_screen_feed_about">Sobre as Notícias</string>
    <string name="title_activity_screen_state">Indicativos do Estado</string>
    <string name="title_activity_screen_choose_indicative_with_line_graph">Escolha um Indicativo</string>
    <string name="title_activity_graph">Gráfico</string>
    <string name="title_activity_screen_graph">Gráfico</string>
    <string name="title_activity_about_indicatives">Sobre os Indicativos</string>
    <string name="title_activity_screen_about_query">Sobre a Consulta</string>
    <string name="title_news_about">Notícias</string>
    <string name="title_activity_screen_general_comparisons">Comparacões</string>
    <string name="title_activity_tela_consulta_por_indicativo">Consulta por Indicativo</string>
    <string name="title_activity_screen_query_result_per_indicative">Resultado da Consulta</string>
    <string name="title_activity_screen_general_queries">Consultas</string>
    <string name="title_activity_screen_about_comparison">Sobre a Comparação</string>
    <string name="title_activity_screen_state_history">Histórico de Indicativo</string>
    <string name="title_activity_screen_about_state_list">Lista Estados</string>
    <string name="title_activity_screen_about_state">Estado</string>
    <string name="title_activity_screen_about_choose_indicative">Sobre Escolha de Indicativo</string>
    <string name="title_activity_screen_about_comparison_of_states">Sobre Comparação de Estados</string>
    <string name="title_activity_screen_about_query_result">Sobre Resultado da Consulta</string>
    <string name="title_activity_screen_about_indicative_history">Sobre Histórico de Indicativo</string>
    <string name="title_activity_screen_about_graph">Sobre Gráfico</string>
    <string name="title_activity_screen_about_choose_indicative_graph_comparison">Sobre Escolha um Indicativo</string>
    <string name="app_name">Educação em Foco</string>
    <string name="action_settings">Settings</string>
    <string name="menu_button_states_list">Lista de Estados</string>
    <string name="menu_button_comparison">Comparar</string>
    <string name="button_generate_graph">Gerar grafico</string>
    <string name="tittle_choose_graph_indicative">Escolha o indicativo para gerar o gráfico:</string>
    <string name="empty_string"></string>
    <string name="menu_button_query">Consulta</string>
    <string name="menu_button_feed">Notícias</string>
    <string name="menu_button_query_per_indicative">Consulta por indicativo</string>
    <string name="button_screen_indicatives">Ir</string>
    <string name="button_indicatives">Gerar gráfico</string>
    <string name="population">População</string>
    <string name="state_pib_participation">Participação Estadual no PIB (%)</string>
    <string name="technological_difusion_project_amount">Projeto de Difusão Tecnológica (Qtd.)</string>
    <string name="technological_difusion_project_investment">Projeto de Difusão Tecnológica (R$)</string>
    <string name="elementary_school_ideb_initial_years">IDEB do Ensino Fundamental (Séries Iniciais)</string>
    <string name="elementary_school_ideb_final_years">IDEB do Ensino Fundamental (Séries Finais)</string>
    <string name="high_school_ideb">IDEB do Ensino Médio</string>
    <string name="primeiros_projetos_program_amount">Programa Primeiros Projetos (Qtd.)</string>
    <string name="primeiros_projetos_program_investment">Programa Primeiros Projetos (R$)</string>
    <string name="search_projects_cnpq_amount">Projetos de Pesquisa Apoio CNPq (Qtd.)</string>
    <string name="search_projects_cnpq_investment">Projetos de Pesquisa Apoio CNPq (R$)</string>
    <string name="teen_searchers_amount">Jovens pesquisadores (Qtd.)</string>
    <string name="teen_searchers_investment">Jovens pesquisadores (R$)</string>
    <string name="initiation_projects_amount">Projetos INCT (Qtd.)</string>
    <string name="initiation_projects_investment">Projetos INCT (R$)</string>
    <string name="students_average_per_class">Média de Alunos por Turma (Qtd.)</string>
    <string name="daily_class_hours_average">Média de horas aula diárias</string>
    <string name="distortion_rate">Taxa de Distorção de Idade (%)</string>
    <string name="utilization_rate">Taxa de Aproveitamento (%)</string>
    <string name="dropout_rate">Taxa de Abandono Escolar (%)</string>
    <string name="census">census Escolar (matriculados)</string>
    <string name="elementary_school_students_per_class_average">Média de Alunos por Turma do Ensino Fundamental(Qtd.)</string>
    <string name="high_school_students_per_class_average">Média de Alunos por Turma do Ensino Médio(Qtd.)</string>
    <string name="class_hours_elementary">Média de horas aula diárias do Ensino Fundamental</string>
    <string name="class_hours_high_school">Média de horas aula diárias do Ensino Médio</string>
    <string name="distortion_rate_elementary">Taxa de Distorção Idade/Série do Ensino Fundamental (%)</string>
    <string name="distortion_rate_high_school">Taxa de Distorção Idade/Série do Ensino Médio (%)</string>
    <string name="utilization_rate_elementary">Taxa de Aprovação do Ensino Fundamental (%)</string>
    <string name="utilization_rate_high_school">Taxa de Aprovação do Ensino Médio (%)</string>
    <string name="dropout_rate_elementary">Taxa de Abandono do Ensino Fundamental (%)</string>
    <string name="dropout_rate_high_school">Taxa de Abandono do Ensino Médio (%)</string>
    <string name="census_initial_years_elemetary">census Escolar dos Anos Iniciais do Ensino Fundamental (Matriculados)</string>
    <string name="census_final_years_elemetary">census Escolar dos Anos Finais do Ensino Fundamental (Matriculados)</string>
    <string name="census_high_school">census Escolar do Ensino Médio (Matriculados)</string>
    <string name="census_high_school_eja">census Escolar do EJA - Fundamental (Matriculados)</string>
    <string name="census_eja_elementary">census Escolar do EJA - Médio (Matriculados)</string>
    <string name="graph_button">Gráfico</string>
    <string name="bt_historico">Historico</string>
    <string name="bt_estados">Estados</string>
    <string name="participacao_PIB">Participacao Estadual no PIB</string>
    <string name="numero_projetos">Projetos de Difusão Tecnológica</string>
    <string name="participacao_IDEB">IDEB</string>
    <string name="Programa_primeiros_projetos">Programa Primeiros Projetos</string>
    <string name="Projetos_pesquisa_CNPq">Projetos de Pesquisa Apoio CNPq</string>
    <string name="jovens_pesquisadores">Jovens pesquisadores</string>
    <string name="projeto_iniciacao">Projetos INCT</string>
    <string name="estados_opcao">Escolha dois estados: </string>
    <string name="compara_estados">Comparar</string>
    <string name="titulo_menu">Educação em Foco</string>
    <string name="string_x"> x </string>
    <string name="botao_historico_estado"> Historico </string>
    <string name="botao_historico"> Histórico</string>
    <string name="botao_estado"> Estado</string>
    <string name="tela_sobre">Dados usados no EEF</string>
    <string name="participacao_percentual_PIB"> Participação Estadual no PIB: </string>
    <string name="participacao_percentual_PIB_conteudo"> Porcentagem referente a participação de cada estado na soma total do PIB nacional </string>
    <string name="projetos_difusao">Projetos de Difusão Tecnologica:</string>
    <string name="projetos_difusao_conteudo">  Número de projetos de difusão e popularização de ciência e tecnologia apoiados.
    		Inclui apoio a diversos projetos de difusão e popularização da ciência e tecnologia;</string>
    <string name="ideb"> IDEB - Indice de Desenvolvimento da Educação Básica: </string>
    <string name="ideb_conteudo"> O IDEB é um indicador criado pelo governo federal para medir a qualidade do ensino nas escolas públicas. 
    		A escala de notas vai de 0 a 10.</string>
    <string name="primeiros_projetos"> Programa Primeiros Projetos:  </string>
    <string name="primeiros_projetos_conteudo"> Programa de apoio à infraestrutura de ciência e técnologia para jovens pesquisadores. </string>
    <string name="projetos_apoio_cnpq"> Projetos de pesquisa e apoio CNPq:  </string>
    <string name="projetos_apoio_cnpq_conteudo"> Número de projetos contratados pelos Principais Programas de Apoio à Pesquisa do CNPq.  </string>
    <string name="projetos_jovens_pesquisadores"> Projetos Jovens Pesquisadores:  </string>
    <string name="projetos_jovens_pesquisadores_conteudo"> Número de projetos contratados pelo Programa Jovens Pesquisadores.
    		A UF considerada é a UF da instituição de destino.  </string>
    <string name="projetos_inct"> Projetos Instituto Nacional de Ciência e Tecnologia - INCT: </string>
    <string name="projetos_inct_conteudo"> Número de projetos contratados dos Institutos Nacionais de Ciência e Tecnologia. </string>
    <string name="botao_sobre">Sobre</string>
    <string name="botao_sobre_descricao">	Através dessa tela é possivel ao usuário escolher um dos indicativos abaixo e a partir da seleção visualizar o indicativo para todos os estados</string>
    <string name="titulo_escolhe_estado_por_indicativo">Escolha o indicativo</string>
    <string name="bt_verifica_estados_por_indicativo">Verificar estados</string>
    <string name="title_consultar_estados">Consultar Estados</string>
    <string name="title_consultar_estado1">Escolha o primeiro estado.</string>
    <string name="botao_sobre_escolha_indicativo">Através dessa tela é possível selecionar um ou mais indicativos e após ele selecionar o botão avançar ,será redirecionado a tela de comparação do indicativo(s) escolhido entre os dois estados.Também nessa tela o usuário tem a opção de marcar todos os indicativos ou desmarcar todos os indicativos</string>
    <string name="acre">Acre</string>
    <string name="alagoas">Alagoas</string>
    <string name="amapa">Amapa</string>
    <string name="amazonas">Amazonas</string>
    <string name="bahia">Bahia</string>
    <string name="ceara">Ceará</string>
    <string name="df">Distrito Federal</string>
    <string name="espiritoSanto">Esprito Santo</string>
    <string name="goias">Goias</string>
    <string name="maranhao">Maranhão</string>
    <string name="matoGrossoDoSul">Mato Grosso do Sul</string>
    <string name="matoGrosso">Mato Grosso</string>
    <string name="minasGerais">Minas Gerais</string>
    <string name="para">Pará</string>
    <string name="paraiba">Paraíba</string>
    <string name="parana">Paraná</string>
    <string name="pernambuco">Pernambuco</string>
    <string name="piaui">Piaui</string>
    <string name="rioDeJaneiro">RioDeJaneiro</string>
    <string name="rioGrandeDoNorte">Rio Grande do Norte</string>
    <string name="rioGrandeDoSul">Rio Grande do Sul</string>
    <string name="rondonia">Rondonia</string>
    <string name="roraima">Roraima</string>
    <string name="santaCatarina">Santa Catarina</string>
    <string name="saoPaulo">São Paulo</string>
    <string name="sergipe">Sergipe</string>
    <string name="tocantins">Tocantins</string>
    <string name="title_sobre_resultado_da_consulta">Sobre Resultado da Consulta</string>
</resources>