<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_titulo"
            style="@style/tituloSobre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/tittle_choose_graph_indicative" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_population"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="@string/population" />

            <RadioButton
                android:id="@+id/radio_pib"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/pib_participation" />

            <RadioButton
                android:id="@+id/radio_technological_diffusion_amount"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/technological_difusion_project_amount" />

            <RadioButton
                android:id="@+id/radio_technological_diffusion_investment"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/technological_difusion_project_investment" />

            <RadioButton
                android:id="@+id/radio_ideb_elementary_inicials"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/elementary_school_ideb_initial_years" />

            <RadioButton
                android:id="@+id/radio_ideb_elementary_finals"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/elementary_school_ideb_final_years" />

            <RadioButton
                android:id="@+id/radio_ideb_high_school"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/high_school_ideb" />

            <RadioButton
                android:id="@+id/radio_primeiros_projetos_amount"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/primeiros_projetos_program_amount" />

            <RadioButton
                android:id="@+id/radio_primeiros_projetos_investment"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/primeiros_projetos_program_investment" />

            <RadioButton
                android:id="@+id/radio_apoio_cnpq_amount"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/search_projects_cnpq_amount" />

            <RadioButton
                android:id="@+id/radio_apoio_cnpq_investment"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/search_projects_cnpq_investment" />

            <RadioButton
                android:id="@+id/radio_teen_searchers_amount"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/teen_searchers_amount" />

            <RadioButton
                android:id="@+id/radio_teen_searchers_investment"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/teen_searchers_investment" />

            <RadioButton
                android:id="@+id/radio_inct_projects_amount"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/initiation_projects_amount" />

            <RadioButton
                android:id="@+id/radio_inct_projects_investment"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/initiation_projects_investment" />

            <RadioButton
                android:id="@+id/radio_students_per_class_elementary"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/elementary_school_students_per_class_average" />

            <RadioButton
                android:id="@+id/radio_students_per_class_high_school"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/high_school_students_per_class_average" />

            <RadioButton
                android:id="@+id/radio_class_hours_elementary"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/class_hours_elementary" />

            <RadioButton
                android:id="@+id/radio_class_hours_high_school"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/class_hours_high_school" />

            <RadioButton
                android:id="@+id/radio_distortion_rate_elementary"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/distortion_rate_elementary" />

            <RadioButton
                android:id="@+id/radio_distortion_rate_high_school"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/distortion_rate_high_school" />

            <RadioButton
                android:id="@+id/radio_approval_rate_elementary"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/utilization_rate_elementary" />

            <RadioButton
                android:id="@+id/radio_approval_rate_high_school"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/utilization_rate_high_school" />

            <RadioButton
                android:id="@+id/radio_dropout_rate_elementary"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/dropout_rate_elementary" />

            <RadioButton
                android:id="@+id/radio_dropout_rate_high_school"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/dropout_rate_high_school" />

            <RadioButton
                android:id="@+id/radio_initial_census_elementary"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/census_initial_years_elemetary" />

            <RadioButton
                android:id="@+id/radio_final_census_elementary"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/census_final_years_elemetary" />

            <RadioButton
                android:id="@+id/radio_census_high_school"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/census_high_school" />

            <RadioButton
                android:id="@+id/radio_census_eja_elementary"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/census_eja_elementary" />

            <RadioButton
                android:id="@+id/radio_census_high_school_eja"
                style="@style/subTituloSobre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/census_high_school_eja" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <Button
                android:id="@+id/grafico"
                style="@style/botaoMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/avancar"
                android:onClick="clickButtonNext" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>