<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/titulo_escolhe_estado_por_indicativo" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="@string/population" />

            <RadioButton
                android:id="@+id/radio_pib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/pib_participation" />

            <RadioButton
                android:id="@+id/radio_technological_diffusion_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/technological_difusion_project_amount" />

            <RadioButton
                android:id="@+id/radio_technological_diffusion_investment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/technological_difusion_project_investment" />

            <RadioButton
                android:id="@+id/radio_ideb_elementary_inicials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/elementary_school_ideb_initial_years" />

            <RadioButton
                android:id="@+id/radio_ideb_elementary_finals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/elementary_school_ideb_final_years" />

            <RadioButton
                android:id="@+id/radio_ideb_high_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/high_school_ideb" />

            <RadioButton
                android:id="@+id/radio_primeiros_projetos_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/primeiros_projetos_program_amount" />

            <RadioButton
                android:id="@+id/radio_primeiros_projetos_investment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/primeiros_projetos_program_investment" />

            <RadioButton
                android:id="@+id/radio_apoio_cnpq_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/search_projects_cnpq_amount" />

            <RadioButton
                android:id="@+id/radio_apoio_cnpq_investment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/search_projects_cnpq_investment" />

            <RadioButton
                android:id="@+id/radio_teen_searchers_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/teen_searchers_amount" />

            <RadioButton
                android:id="@+id/radio_teen_searchers_investment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/teen_searchers_investment" />

            <RadioButton
                android:id="@+id/radio_inct_projects_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/initiation_projects_amount" />

            <RadioButton
                android:id="@+id/radio_inct_projects_investment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onRadioButtonClicked"
                android:text="@string/initiation_projects_investment" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <Button
                android:id="@+id/buttonEstados"
                style="@style/botaoMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/avancar"
                android:onClick="clickBotaoVerificaEstadosPorIndicativo" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>